<resources>
    <string name="app_name">Pack Pals</string>
    <string name="nav_header_title">PackPal Trip</string>
    <string name="Map">Map</string>
    <string name="Itinerary">Itinerary</string>
    <string name="Photos">Photos</string>
    <string name="Pals">Pals</string>
    <string name="FindAPal">Find A Pal</string>
    <string name="Playlist">Playlist</string>
    <string name="Expenses">Expenses</string>
    <string name="NewExpense">Edit Expense</string>
    <string name="PackingList">Packing List</string>
    <string name="GroupChat">Group Chat</string>
    <string name="Profile">Profile</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="title_activity_navigation_drawer_view">NavigationDrawerView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nav_header_subtitle">Pack it up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IncomingPalRequests">Pal Requests</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="birth_month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="birth_year">
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
    </string-array>

    <string-array name="split_by_spinner_values">
        <item>Equally</item>
        <item>Percent</item>
        <item>Exact</item>
    </string-array>
</resources>