<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/navigation_Menu">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapFragment"
            android:title="@string/Map"
            android:icon="@drawable/ic_location"/>
        <item
            android:id="@+id/itineraryPageFragment"
            android:title="@string/Itinerary"
            android:icon="@drawable/ic_itinerary"/>
        <item
            android:id="@+id/albumFragment"
            android:title="@string/Photos"
            android:icon="@drawable/ic_photos"/>
        <item
            android:id="@+id/expensesFragment"
            android:title="@string/Expenses"
            android:icon="@drawable/ic_expenses"/>
        <item
            android:id="@+id/packingListFragment"
            android:title="@string/PackingList"
            android:icon="@drawable/ic_packing_list"/>
        <item
            android:id="@+id/tripReturn"
            android:title="@string/TripReturn"
            android:icon="@drawable/ic_return_trip"/>
    </group>
</menu>