<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/Profile"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/pack_pals">
        <menu>
            <item
                android:id="@+id/profilePageFragment"
                android:title="@string/Profile"/>
            <item
                android:id="@+id/findAPalFragment"
                android:title="@string/FindAPal" />
            <item
                android:id="@+id/incomingPalRequestsFragment"
                android:title="@string/IncomingPalRequests"/>
            <item
                android:id="@+id/palsFragment"
                android:title="@string/Pals"/>
        </menu>
    </item>
</menu>